--- a/public/popup.html
+++ b/public/popup.html
@@ -1,8 +1,24 @@
 <html>
+  <head>
+    <title>Store Input</title>
+    <style>
+      #history {
+        margin-top: 20px;
+      }
+      .history-item {
+        margin-bottom: 10px;
+      }
+    </style>
+  </head>
   <body>
-    <h1>Sneaky Lingo</h1>
-    <h2>Word Bank</h2>
+    <input type="text" id="userInput" placeholder="Enter something..." />
+    <button id="saveButton">Save</button>
 
+    <div id="history">
+      <h1>Yo :D</h1>
+      <h3>History:</h3>
+      <!-- History list will populate here -->
+    </div>
     <script src="../dist/popup.js"></script>
   </body>
 </html>
