adding beautifully to table

--- a/public/popup.html
+++ b/public/popup.html
@@ -29,10 +29,13 @@
           </td>
           <td><button id="add-word-btn">+</button></td>
         </tr>
+        <tr id="rows-placeholder-top"></tr>
+        <tr id="rows-placeholder-bottom"></tr>
       </table>
       <button>Import</button>
     </div>
 
+    <script src="../dist/constants.js"></script>
     <script src="../dist/popup.js"></script>
   </body>
 </html>
