Disabled button works

--- a/public/popup.html
+++ b/public/popup.html
@@ -8,8 +8,7 @@
       <h1>Sneaky Lingo</h1>
 
       <div id="disable-container">
-        <div>Disable</div>
-        <button>t</button>
+        <button id="disable-btn">Disable</button>
       </div>
 
       <table id="words-table">
